feat(semantic): complete plugin import and offline ChatBI (#1549)
* feat(semantic): complete plugin import and offline ChatBI

* test(semantic): use canonical Postgres env contract